--- a/lanastasov/index.html
+++ b/lanastasov/index.html
@@ -3,5 +3,6 @@
 	<body>
 		<p> words: </p>
 		<a href="http://dictionary.cambridge.org/dictionary/british/intrinsic?q=intrinsically"> <b> intrinsically </b> </a>
+		<a href="http://dictionary.cambridge.org/dictionary/british/reconcile"> <b> reconcile </b> </a>
 	</body>
 </html>
