--- a/lanastasov/index.html
+++ b/lanastasov/index.html
@@ -4,5 +4,6 @@
 		<p> words: </p>
 		<a href="http://dictionary.cambridge.org/dictionary/british/intrinsic?q=intrinsically"> <b> intrinsically </b> </a>
 		<a href="http://dictionary.cambridge.org/dictionary/british/reconcile"> <b> reconcile </b> </a>
+		<a href="http://dictionary.cambridge.org/dictionary/business-english/isomorphic"> <b> isomorphic </b> </a>
 	</body>
 </html>
