--- a/lanastasov/index.html
+++ b/lanastasov/index.html
@@ -5,5 +5,6 @@
 		<a href="http://dictionary.cambridge.org/dictionary/british/intrinsic?q=intrinsically"> <b> intrinsically </b> </a>
 		<a href="http://dictionary.cambridge.org/dictionary/british/reconcile"> <b> reconcile </b> </a>
 		<a href="http://dictionary.cambridge.org/dictionary/business-english/isomorphic"> <b> isomorphic </b> </a>
+		<a href="http://dictionary.cambridge.org/dictionary/british/imposition"> <b> imposition </b> </a>
 	</body>
 </html>
