--- a/lanastasov/index.html
+++ b/lanastasov/index.html
@@ -6,5 +6,6 @@
 		<a href="http://dictionary.cambridge.org/dictionary/british/reconcile"> <b> reconcile </b> </a>
 		<a href="http://dictionary.cambridge.org/dictionary/business-english/isomorphic"> <b> isomorphic </b> </a>
 		<a href="http://dictionary.cambridge.org/dictionary/british/imposition"> <b> imposition </b> </a>
+		idiosyncrasy
 	</body>
 </html>
