--- a/lanastasov-german/index.html
+++ b/lanastasov-german/index.html
@@ -1,2 +1,6 @@
-beschäftigt
-werden
+beschäftigt - busy
+werden - be, become
+Geschäft - business
+Ich bin beschäftigt - I am busy
+Ich bin jetzt sehr beschäftigt - I am very busy
+ich bin sehr beschäftigt heute - I am very busy today
