--- a/lanastasov-german/index.html
+++ b/lanastasov-german/index.html
@@ -3,4 +3,5 @@ werden - be, become
 Geschäft - business
 Ich bin beschäftigt - I am busy
 Ich bin jetzt sehr beschäftigt - I am very busy
-ich bin sehr beschäftigt heute - I am very busy today
+Ich bin sehr beschäftigt heute - I am very busy today
+Ich werde sehr beschäftigt sein - I will be very busy
