--- a/lanastasov-german/index.html
+++ b/lanastasov-german/index.html
@@ -5,3 +5,5 @@ Ich bin beschäftigt - I am busy
 Ich bin jetzt sehr beschäftigt - I am very busy
 Ich bin sehr beschäftigt heute - I am very busy today
 Ich werde sehr beschäftigt sein - I will be very busy
+
+warten - to wait
