--- a/lanastasov-german/index.html
+++ b/lanastasov-german/index.html
@@ -7,3 +7,4 @@ Ich bin sehr beschäftigt heute - I am very busy today
 Ich werde sehr beschäftigt sein - I will be very busy
 
 warten - to wait
+Warum warten sie ? - Why do you wait ?
